<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="640dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expBox"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="start|center_vertical"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:textSize="30sp" />

        <View
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center" />



            <TextView
                android:id="@+id/ansBox"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="20"
                android:gravity="start|center_vertical"
                android:scrollHorizontally="true"
                android:scrollbars="horizontal"
                android:textSize="40sp" />


        <View
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="379dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/buttonFunc"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:text="@string/func"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/buttonConts"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:text="@string/conts"
                    android:textSize="19sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/buttonClear"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:text="@string/ce"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/buttonDel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:text="@string/del"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/buttonAns"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:text="@string/ans"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button1"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_1"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button2"
                        style="@style/Widget.MaterialComponents.Button.TextButton"

                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_2"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button3"
                        style="@style/Widget.MaterialComponents.Button.TextButton"

                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_3"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button4"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_4"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button5"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_5"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button6"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_6"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button7"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_7"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button8"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_8"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button9"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_9"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button0"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/_0"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonPoint"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/Point"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonExpo"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:autoText="false"
                        android:singleLine="true"
                        android:text="@string/expo"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textDirection="inherit"
                        android:textSize="20sp"
                        android:typeface="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonOpen"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/openBra"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/buttonClosed"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/closeBra"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/buttonEquals"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:text="@string/equals"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonMult"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/mult"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonDivide"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/divide"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonAdd"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/plus"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonSub"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/subtract"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonPow"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/pow"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>